<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_500"
    tools:context=".BookingTicketActivity">

    <TextView
        android:id="@+id/tvmyticket"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Ticket"
        android:gravity="center"
        android:textSize="30dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/agency_fbb"
        android:letterSpacing="0.1"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="360dp"
        android:layout_height="650dp"
        app:layout_constraintTop_toBottomOf="@id/tvmyticket"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/ticketbg">


        <TextView
            android:id="@+id/tvTicketRoute"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/agency_fbb"
            android:gravity="center"
            android:text="Kathmandu-Pokhara"
            android:textColor="@color/purple_500"
            android:textSize="25dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/linebg"
            android:layout_width="310dp"
            android:layout_height="360dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="12dp"
            android:src="@drawable/linebgg"
            app:cardBackgroundColor="#e6e6e6"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTicketRoute">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:id="@+id/ll2myticket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv2"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/agency_fbb"
                        android:gravity="left"
                        android:text="Travel Date:"
                        android:textColor="@color/main"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/tvTicketDate"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="left"
                        android:text="August 10, 2021"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll3myticket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:layout_toRightOf="@+id/ll2myticket"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv3"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/agency_fbb"
                        android:gravity="right"
                        android:text="Vehicle Type:"
                        android:textColor="@color/main"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/tvTicketVehicleType"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:gravity="right"
                        android:text="Bus"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll4myticket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll2myticket"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv4"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/agency_fbb"
                        android:gravity="left"
                        android:text="Total Seats:"
                        android:textColor="@color/main"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/tvTicketSeat"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="04"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll5myticket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll3myticket"
                    android:layout_margin="16dp"
                    android:layout_toRightOf="@+id/ll4myticket"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv5"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/agency_fbb"
                        android:gravity="right"
                        android:text="Boarding Point:"
                        android:textColor="@color/main"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/tvTicketBoardingPoint"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="Kalanki"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll6myticket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll5myticket"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv6"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/agency_fbb"
                        android:gravity="left"
                        android:text="Boarding Person:"
                        android:textColor="@color/main"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/tvTicketBoardingPerson"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="Suman Basnet"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll7myticket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll4myticket"
                    android:layout_margin="16dp"
                    android:layout_toRightOf="@id/ll6myticket"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv7"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/agency_fbb"
                        android:gravity="right"
                        android:text="Contact info:"
                        android:textColor="@color/main"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/tvTicketContact"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="9841009881"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="280dp"
            android:layout_height="40dp"
            app:cardCornerRadius="100dp"
            app:cardElevation="6dp"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toBottomOf="@id/linebg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <Button
                android:id="@+id/btnConfirmBooking"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="confirm booking"
                android:textColor="@color/white"
                app:backgroundTint="@null"
                android:background="@drawable/btnmain"
                android:shadowColor="@color/black"
                android:shadowRadius="3"
                android:shadowDy="2"
                app:layout_constraintTop_toBottomOf="@id/cardview5"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>